
#add_executable(main_accuracy main_accuracy.cpp)
#target_link_libraries(main_accuracy  ${LIB_NAME})

#add_executable(main_AKP_ni main_AKP_ni.cpp)
#target_link_libraries(main_AKP_ni   ${LIB_NAME})

#add_executable(main_AKP_ni_sparse main_AKP_ni_sparse.cpp)
#target_link_libraries(main_AKP_ni_sparse   ${LIB_NAME})

#add_executable(main_AKP_i_chebyshev main_AKP_i_chebyshev.cpp)
#target_link_libraries(main_AKP_i_chebyshev   ${LIB_NAME})

#add_executable(main_AKP_i_canonical main_AKP_i_canonical.cpp)
#target_link_libraries(main_AKP_i_canonical   ${LIB_NAME})

#add_executable(main_collision main_collision.cpp)
#target_link_libraries(main_collision   ${LIB_NAME})

#add_executable(main_multiphase main_multiphase.cpp)
#target_link_libraries(main_multiphase   ${LIB_NAME})

#add_executable(main_vanderpol_i_chebyshev main_vanderpol_i_chebyshev.cpp)
#target_link_libraries(main_vanderpol_i_chebyshev ${LIB_NAME})

#add_executable(main_vanderpol_i_canonical main_vanderpol_i_canonical.cpp)
#target_link_libraries(main_vanderpol_i_canonical ${LIB_NAME})

#add_executable(main_vanderpol_ni main_vanderpol_ni.cpp)
#target_link_libraries(main_vanderpol_ni   ${LIB_NAME})

#add_executable(main_vanderpol_ni_sparse main_vanderpol_ni_sparse.cpp)
#target_link_libraries(main_vanderpol_ni_sparse   ${LIB_NAME})

#add_executable(main_lotka_volterra_i_chebyshev main_lotka_volterra_i_chebyshev.cpp)
#target_link_libraries(main_lotka_volterra_i_chebyshev   ${LIB_NAME})

#add_executable(main_lotka_volterra_i_canonical main_lotka_volterra_i_canonical.cpp)
#target_link_libraries(main_lotka_volterra_i_canonical   ${LIB_NAME})

#add_executable(main_lotka_volterra_ni main_lotka_volterra_ni.cpp)
#target_link_libraries(main_lotka_volterra_ni   ${LIB_NAME})

#add_executable(main_lotka_volterra_ni_sparse main_lotka_volterra_ni_sparse.cpp)
#target_link_libraries(main_lotka_volterra_ni_sparse   ${LIB_NAME})

#add_executable(main_spring_mass_ni main_spring_mass_ni.cpp)
#target_link_libraries(main_spring_mass_ni   ${LIB_NAME})

#add_executable(main_spring_mass_ni_sparse main_spring_mass_ni_sparse.cpp)
#target_link_libraries(main_spring_mass_ni_sparse   ${LIB_NAME})

add_executable(main_spring_mass_i_canonical main_spring_mass_i_canonical.cpp)
target_link_libraries(main_spring_mass_i_canonical   ${LIB_NAME})

#add_executable(main_spring_mass_i_chebyshev main_spring_mass_i_chebyshev.cpp)
#target_link_libraries(main_spring_mass_i_chebyshev   ${LIB_NAME})

#add_executable(main_intersect main_intersect.cpp)
#target_link_libraries(main_intersect   ${LIB_NAME})

#add_executable(main_test_dct main_test_dct.cpp)
#target_link_libraries(main_test_dct   ${LIB_NAME})

add_executable(main_test_canonical_multiplication main_test_canonical_multiplication.cpp)
target_link_libraries(main_test_canonical_multiplication   ${LIB_NAME})

#add_executable(main_test_sampling main_test_sampling.cpp)
#target_link_libraries(main_test_sampling   ${LIB_NAME})

#add_executable(main_tests main_tests.cpp)
#target_link_libraries(main_tests   ${LIB_NAME})

